clirar: Rewrite unrar parsing code

readListLine() is now very short. It simply checks the version of unrar
and calls line-handling functions specific for unrar 3/4 and 5 termed
handleUnrar4Line() and handleUnrar5Line(), respectively.

When the line-handling functions have completed parsing all the details
of an archive entry, they call an entry-handling function, either
handleUnrar4Entry() or handleUnrar5Entry().

BUG: 331065
FIXED-IN: 15.12.0
REVIEW: 124503